beets-466 icon shift fix
The icons stay stationary when the bar collapses/expands

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -50,6 +50,7 @@ li a {
   color: white;
   text-decoration: none;
   padding: 15px;
+  padding-left: 20px;
 }
 
 li a:hover {
